FIX: spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -607,6 +607,7 @@ font-size: 28px;
     width: 75%;
     float: left;
     padding-top: 5px;
+    padding-bottom: 5px;
     border-bottom: 1px solid black
 }
 
